--- a/application.properties
+++ b/application.properties
@@ -2,9 +2,9 @@
 #MYSQL DB Properties
 #=====================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ecart
+spring.datasource.url=jdbc:mysql://localhost:3306/bankapplication
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=root
 
 #JPA Properties
 spring.jpa.hibernate.ddl-auto=update
