--- a/application.properties
+++ b/application.properties
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 management.endpoints.web.exposure.include=*
-spring.rabbitmq.addresses=amqps://meorctxp:vzzbJfILgdsAWocy6q2bGKeLhG7GshFt@puffin.rmq2.cloudamqp.com/meorctxp
+spring.rabbitmq.addresses=amqps://svraoqex:I7OG7suROWGPqM8_DQRIcXh0s4Zl8vZQ@jaguar.rmq.cloudamqp.com/svraoqex
